[gd_scene load_steps=15 format=3 uid="uid://bsrpd1f7ndo2p"]

[ext_resource type="Script" uid="uid://daquw2di3cbf6" path="res://Dev_Levels/Test_Level_5/Scripts/test_level_5_cutscene_01.gd" id="1_p16ab"]
[ext_resource type="PackedScene" uid="uid://dmga8usve5ubr" path="res://Dev_Levels/Test_Level_5/Cutscenes/CutsceneTest1/CutsceneTest1.glb" id="2_p16ab"]
[ext_resource type="Material" uid="uid://qqu0grfi7crc" path="res://Materials/DebugMaterials/LightCheckerTriplaner.tres" id="3_au4n3"]
[ext_resource type="AudioStream" uid="uid://b2wx50rceoupp" path="res://AudioFX/Artificial/Door_Slam.wav" id="5_6ulqj"]
[ext_resource type="AudioStream" uid="uid://dwb3ih3oxntwo" path="res://AudioFX/Environment/Natural/Fall_Concrete_01.wav" id="5_au4n3"]
[ext_resource type="Material" uid="uid://dv8mmrc4c5blb" path="res://Materials/DebugMaterials/DarkCheckerTriplaner.tres" id="6_l5tvg"]

[sub_resource type="Environment" id="Environment_p16ab"]
background_mode = 1
background_color = Color(0.0923971, 0.0923971, 0.0923971, 1)
ssao_enabled = true
ssil_enabled = true
glow_enabled = true
glow_intensity = 4.04
glow_bloom = 1.0

[sub_resource type="Animation" id="Animation_6ulqj"]
resource_name = "FallAnim"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.375916, 0.146722, -3.81603, 0.266667, 1, -0.375916, -1.60477, -1.20909, 0.5, 1, -0.375916, -1.60477, 1.17203, 0.766667, 1, -0.375916, -1.60477, 1.63834, 1, 1, -0.375916, -1.60477, 1.63834)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.668339, -0.420694), Vector3(-0.101551, -1.28316, -0.779997), Vector3(-0.0716794, -1.65794, -1.5567), Vector3(-0.112983, -1.00428, -0.729839), Vector3(0.0331565, -0.227129, -0.456281)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../SFX/FallConcrete01")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 2.09,
"start_offset": 0.0,
"stream": ExtResource("5_au4n3")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_au4n3"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.375916, 0.146722, -3.81603)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.668339, -0.420694)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a4lua"]
_data = {
&"FallAnim": SubResource("Animation_6ulqj"),
&"RESET": SubResource("Animation_au4n3")
}

[sub_resource type="Animation" id="Animation_8ownp"]
resource_name = "Cube_004Action"
length = 2.70833
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Cube_004")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.715459, 0, 0.698655, 2.06667, 1, 0, 0.715459, 0, 0.698655, 2.1, 1, 0, 0.716775, 0, 0.697305, 2.13333, 1, 0, 0.720559, 0, 0.693393, 2.16667, 1, 0, 0.727773, 0, 0.685818, 2.2, 1, 0, 0.738567, 0, 0.67418, 2.23333, 1, 0, 0.751227, 0, 0.660044, 2.26667, 1, 0, 0.765205, 0, 0.643786, 2.3, 1, 0, 0.779977, 0, 0.625808, 2.36667, 1, 0, 0.809758, 0, 0.586764, 2.4, 1, 0, 0.823271, 0, 0.567649, 2.46667, 1, 0, 0.846485, 0, 0.532413, 2.5, 1, 0, 0.860009, 0, 0.510279, 2.53333, 1, 0, 0.895607, 0, 0.444846, 2.56667, 1, 0, 0.935938, 0, 0.352165, 2.6, 1, 0, 0.969626, 0, 0.244594, 2.63333, 1, 0, 0.990548, 0, 0.137167, 2.66667, 1, 0, 0.998927, 0, 0.0463161, 2.7, 1, 0, 0.999957, 0, 0.00926626, 2.70833, 1, 0, -1, 0, 4.37114e-08)
tracks/1/type = "position_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("male01/Skeleton3D:Root")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, -0.0264001, 1.31774e-08)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("male01/Skeleton3D:Root")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0.5, -0.5, 0.5, -0.5)
tracks/3/type = "rotation_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("male01/Skeleton3D:spine_02")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/4/type = "position_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("male01/Skeleton3D:upperarm_l")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0.157999, -0.0308458, -0.0140678)
tracks/5/type = "rotation_3d"
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/path = NodePath("male01/Skeleton3D:upperarm_l")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 5.16995e-26, -0.00517022, -1.66536e-16, 0.999987)
tracks/6/type = "rotation_3d"
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/path = NodePath("male01/Skeleton3D:lowerarm_l")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 2.31983e-15, -0.721517, -3.43864e-17, 0.692397)
tracks/7/type = "rotation_3d"
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/path = NodePath("male01/Skeleton3D:upperarm_r")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 5.16995e-26, 0.00517022, 1.66536e-16, 0.999987)
tracks/8/type = "rotation_3d"
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/path = NodePath("male01/Skeleton3D:lowerarm_r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0, 1, 2.31983e-15, 0.721517, 3.43864e-17, 0.692397)
tracks/9/type = "rotation_3d"
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/path = NodePath("male01/Skeleton3D:calf_r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, -1.87125e-15, 0.94929, -4.67812e-16, -0.314403)
tracks/10/type = "rotation_3d"
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/path = NodePath("male01/Skeleton3D:foot_r")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = PackedFloat32Array(0, 1, 1.91307e-17, 0.972821, -1.93569e-15, -0.231559)

[sub_resource type="Animation" id="Animation_u8yy5"]
resource_name = "male01Action"
length = 2.5
tracks/0/type = "position_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("male01/Skeleton3D:Root")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0044266, 0.397309, 0.00328972)
tracks/1/type = "rotation_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("male01/Skeleton3D:Root")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.5, 0.5, -0.5, 0.5)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("male01/Skeleton3D:spine_02")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 2.06667, 1, 0, 0, 0, 1, 2.1, 1, 0, -0.00196273, 0, 0.999998, 2.13333, 1, 0, -0.00757442, 0, 0.999971, 2.16667, 1, 0, -0.018244, 0, 0.999834, 2.2, 1, 0, -0.0339987, 0, 0.999422, 2.23333, 1, 0, -0.052305, 0, 0.998631, 2.26667, 1, 0, -0.0723032, 0, 0.997383, 2.33333, 1, 0, -0.113912, 0, 0.993491, 2.36667, 1, 0, -0.132944, 0, 0.991124, 2.4, 1, 0, -0.149392, 0, 0.988778, 2.43333, 1, 0, -0.162445, 0, 0.986718, 2.46667, 1, 0, -0.171304, 0, 0.985218, 2.5, 1, 0, -0.17517, 0, 0.984538)
tracks/3/type = "position_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("male01/Skeleton3D:upperarm_l")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.157999, -0.0121367, -0.0140676)
tracks/4/type = "rotation_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("male01/Skeleton3D:upperarm_l")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0.0168852, -0.00488439, 0.327469, 0.944698, 2.06667, 1, 0.0168852, -0.00488439, 0.327469, 0.944698, 2.1, 1, 0.0159981, -0.00744336, 0.327514, 0.944682, 2.13333, 1, 0.0134595, -0.0147642, 0.327628, 0.944596, 2.16667, 1, 0.0086269, -0.0286915, 0.327791, 0.944275, 2.2, 1, 0.00147126, -0.0492921, 0.327901, 0.943424, 2.23333, 1, -0.00686175, -0.0732503, 0.327832, 0.941867, 2.26667, 1, -0.0159784, -0.0994218, 0.327515, 0.939465, 2.33333, 1, -0.0349564, -0.153769, 0.326035, 0.932113, 2.36667, 1, -0.0436191, -0.178516, 0.32499, 0.927691, 2.4, 1, -0.0510887, -0.199824, 0.3239, 0.923336, 2.43333, 1, -0.0570026, -0.216674, 0.322911, 0.919528, 2.46667, 1, -0.0610068, -0.228072, 0.322179, 0.916767, 2.5, 1, -0.0627513, -0.233035, 0.321844, 0.915518)
tracks/5/type = "rotation_3d"
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/path = NodePath("male01/Skeleton3D:lowerarm_l")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, -0.500677, -0.301055, 0.0987137, 0.805571, 2.1, 1, -0.501178, -0.301577, 0.0985554, 0.805083, 2.13333, 1, -0.502608, -0.303067, 0.0981025, 0.803686, 2.16667, 1, -0.505315, -0.305894, 0.09724, 0.801018, 2.2, 1, -0.509286, -0.31005, 0.0959644, 0.797049, 2.23333, 1, -0.513864, -0.314855, 0.0944773, 0.792391, 2.26667, 1, -0.518826, -0.32008, 0.0928451, 0.787241, 2.33333, 1, -0.529035, -0.33089, 0.0894184, 0.776298, 2.36667, 1, -0.533662, -0.335817, 0.0878337, 0.771179, 2.4, 1, -0.537644, -0.34007, 0.0864539, 0.766693, 2.43333, 1, -0.540793, -0.343443, 0.0853516, 0.763089, 2.46667, 1, -0.542925, -0.345732, 0.0845996, 0.760621, 2.5, 1, -0.543855, -0.346731, 0.0842702, 0.759538)
tracks/6/type = "rotation_3d"
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/path = NodePath("male01/Skeleton3D:upperarm_r")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 0.100667, -0.0304553, 0.295603, 0.949504)
tracks/7/type = "rotation_3d"
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/path = NodePath("male01/Skeleton3D:lowerarm_r")
tracks/7/interp = 0
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 0.116279, 0.62113, 0.135798, 0.763044)
tracks/8/type = "rotation_3d"
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/path = NodePath("male01/Skeleton3D:calf_r")
tracks/8/interp = 0
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0, 1, 0, -0.94929, 0, 0.314403)
tracks/9/type = "rotation_3d"
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/path = NodePath("male01/Skeleton3D:foot_r")
tracks/9/interp = 0
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, 0, -0.972821, 0, 0.231559)
tracks/10/type = "rotation_3d"
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/path = NodePath("Cube_004")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = PackedFloat32Array(0, 1, 0, 0.715459, 0, 0.698654)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lu18r"]
_data = {
&"Cube_004Action": SubResource("Animation_8ownp"),
&"male01Action": SubResource("Animation_u8yy5")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ulqj"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[node name="Test_Level_5_Cutscene_01" type="Node3D"]
script = ExtResource("1_p16ab")

[node name="Environment" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_p16ab")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, -0.82273, 0.568433, 0, -0.568433, -0.82273, 91.8061, 16.5319, -12.578)
light_energy = 1.205
shadow_enabled = true

[node name="SFX" type="Node" parent="."]

[node name="DoorSlam" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_6ulqj")
volume_db = -6.71

[node name="FallConcrete01" type="AudioStreamPlayer" parent="SFX"]

[node name="Geometry" type="Node" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0703735, 2.77037, -31.6013)
material_override = ExtResource("3_au4n3")
size = Vector3(20.1991, 11.5752, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.605164, 8.80477, 12.199)
material_override = ExtResource("6_l5tvg")
size = Vector3(15.0387, 2.44385, 94.7994)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.716417, 0.320529, -0.619683, -0.408394, 0.912806, 0, 0.56565, 0.253075, 0.784852, -0.375916, 0.146722, -3.81603)
fov = 46.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_a4lua")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Camera3D"]

[node name="CutsceneTest1" parent="." instance=ExtResource("2_p16ab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.237061, 0, -4.35179)

[node name="Plane" parent="CutsceneTest1" index="1"]
material_override = ExtResource("6_l5tvg")

[node name="Cube" parent="CutsceneTest1" index="2"]
material_override = ExtResource("3_au4n3")

[node name="Cube_001" parent="CutsceneTest1" index="3"]
material_override = ExtResource("3_au4n3")

[node name="Cube_002" parent="CutsceneTest1" index="4"]
material_override = ExtResource("3_au4n3")

[node name="Cube_004" parent="CutsceneTest1" index="5"]
transform = Transform3D(-0.0537875, 0, 0.0983482, 0, 3.49786, 0, -2.26279, 0, -0.00233778, 2.05915, 1.07312, -2.8844)
material_override = ExtResource("6_l5tvg")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CutsceneTest1"]
libraries = {
&"": SubResource("AnimationLibrary_lu18r")
}

[node name="AnimationPlayer3" type="AnimationPlayer" parent="CutsceneTest1"]
libraries = {
&"": SubResource("AnimationLibrary_lu18r")
}

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0.858077, -23.7134)
light_energy = 16.0
light_indirect_energy = 7.769
light_volumetric_fog_energy = 8.795
light_specular = 2.756
shadow_enabled = true
spot_range = 30.9806
spot_angle = 15.0539

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.859763, -25.65)
material = SubResource("StandardMaterial3D_6ulqj")

[connection signal="animation_finished" from="CutsceneTest1/AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]

[editable path="CutsceneTest1"]
